--- a/main.tex
+++ b/main.tex
@@ -216,7 +216,7 @@ columns=flexible,                       % Column format
 {
     \large
     \textbf{Università  degli studi di Modena e Reggio Emilia} \\
-   	\textbf{Dipartimento di Ingegneria} \\
+   	\textbf{Dipartimento di Ingegneria "Enzo Ferrari"} \\
     \vspace{\stretch{0.5}}
     \hspace*{0cm} \hrulefill \hspace*{0cm} \\
     \vspace{\stretch{0.5}}
