--- a/sections/conclusioni.tex
+++ b/sections/conclusioni.tex
@@ -1,16 +1,18 @@
 \chapter{Conclusioni}
 \label{conclusioni}
-Questo studio ha cercato di analizzare le problematiche mostrate dall'adversarial learning nel caso specifico del rilevamento di domini generati algoritmicamente (DGA) sfruttati dalle botnet per attuare comunicazione coi centri di comando e controllo (C\&C). 
+La tesi si focalizza sul rilevamento di domini generati algoritmicamente (DGA) che sono utilizzati dalle botnet per attuare comunicazione coi centri di comando e controllo (C\&C). Tale meccanismo è utilizzato dai principali malware quali cryptolocker, zeus, pushdo, rovnix, tinba, conficker, matsnu e ramdo. L'innovazione attuata dalle tecniche di Machine Learning odierne permette ai difensori di attuare metodi proattivi nei confronti degli antagonisti. Nel caso particolare dei DGA, la metodologia difesa comunemente attuata è l'inclusione di grandi quantità di domini DGA in liste di esclusione statiche. Tale metodo lascia libertà agli antagonisti di modificare i propri algoritmi ed eludere la difesa. Tramite l'ausilio di un classificatore Machine Learning è possibile predire in maniera dinamica la natura dei domini contattati, attuando un metodo di difesa più efficace.
 
-In prima fase si proceduto all'implementazione di un classificatore in grado di distinguere con successo i domini reali da quelli generati algoritmicamente. L'attività di progettazione ha richiesto la messa a punto di un dataset in grado di rappresentare realisticamente la varietà delle tipologie di DGA presenti in rete oltre che ad un subset dei domini di rete comunemente raggiungibili dagli utenti. Tale fase ha richiesto quindi l'ingegnerizzazione di features in grado di catturare le differenze linguistiche presenti nei domini e permettere al classificatore di separare correttamente le due categorie.
-Il classificatore è stato testato e allenato anche rispetto ad caso particolare di DGA, \textit{suppobox} che ha particolarmente messo in difficoltà la performance precedentemente ottenuta.
+Nella prima fase si è progettato e implementato un nuovo classificatore basato su Machine Learning in grado di distinguere con successo i domini reali da quelli generati algoritmicamente. L'attività ha richiesto la messa a punto di un dataset in grado di rappresentare realisticamente le diverse tipologie di domini DGA e domini legittimi. Tale fase ha richiesto quindi la definizione delle features in grado di catturare le differenze linguistiche presenti nei domini e permettere al classificatore di separare correttamente le due categorie. Il classificatore è stato testato e allenato anche rispetto ad caso particolare di DGA, \textit{suppobox} che ha messo in difficoltà l'efficacia del classificatore progettato. In seguito a tali risultati si è progettato un classificatore neurale, in grado di eseguire la medesima classificazione senza l'ausilio di feature ingegnerizzate. Tale classificatore non ha migliorato i risultati ottenuti dall'algoritmo di Machine Learning, ma ha dimostrato la medesima possibilità di apprendimento con minori costi computazionali. Questo grazie alle proprietà delle reti neurali, in grado di estrarre autonomamente le feature necessarie a
 
-Successivamente a ciò si è progettato un classificatore neurale, in grado di eseguire la medesima discriminazione senza l'ausilio di features ingegnerizzate, a partire unicamente da domini mappati numericamente. Tale classificatore ha dimostrato la medesima performance ottenuta precedentemente tramite algoritmi "shallow", con il vantaggio di poter fornire al sistema i domini e lasciare ad esso la libertà di estrarre le caratteristiche salienti che distinguono i nomi di dominio.
+Un successivo passo di miglioramento è stato tentato applicando un sistema di Generative Adversarial Network (\textit{abbr. GAN}) basata sull'architettura di un Autoencoder. Tale Autoencoder ha attuato la codifica e decodifica di domini reali, estraendo nel processo le caratteristiche fondamentali. A partire da questo risultato si è progettato una GAN basandosi sull'architettura dell'Autoencoder, con lo scopo di creare domini sintetici contenenti le stesse caratteristiche fondamentali estratte dai domini reali. Il risultato ottenuto è stato un subset di domini sintetici con i quali è stato possibile testare il classificatore neurale, ottenendo perdite di efficacia nell'esatta classificazione dei domini. Si è proceduto quindi ad allenare ulteriormente il classificatore neurale con i domini provenienti dalla GAN, ottenendo un miglioramento generale nella capacità di classificazione mostrata precedentemente all'utilizzo del sistema di adversarial learning.
 
-In seconda fase si è proceduto a testare la vulnerabilità del classificatore così progettato, rispetto a casi di DGA non ancora esistenti. Tale esperimento è stato attuato tramite la creazione di una Generative Adversarial Network basata sull'architettura di un Autoencoder. 
+In conclusione è possibile affermare che è stato possibile realizzare un classificatore in grado di analizzare con buona approssimazione i domini DGA rispetto a domini legittimi. Il caso particolare di Suppobox ha tuttavia ridotto la capacità del classificatore di una percentuale considerevole, ed anche l'architettura alternativa ideata tramite reti neurali non ha sortito l'effetto sperato e recuperato la prestazione perduta. 
+Tale risultato negativo è forse migliorabile utilizzando un'architettura di rete neurale più evoluta, ad esempio tramite l'utilizzo di una Rete Convoluzionale, in grado di eseguire una più precisa rilevazione delle caratteristiche fondamentali che compongono i domini. 
+L'obiettivo di generare domini realistici tramite l'utilizzo di una GAN è stato in parte raggiunto. I domini generati dimostrano alcune caratteristiche linguistiche proprie dei vocaboli reali,  tuttavia sono ancora distinguibili dal subset reale utilizzato dai classificatori. Tale risultato in parte negativo ha comunque dimostrato di mettere in crisi l'efficacia del classificatore neurale durante la fase di testing. Il classificatore neurale successivamente riallenato aggiungendo l'insieme dei domini generati dalla GAN nel subset di training, non ha mostrato i miglioramenti sperati in fase progettuale, ma tuttavia ha dimostrato robustezza nei confronti degli stessi domini sintetici provenienti dalla GAN.
 
-Il sistema Autoencoder ha reso possibile la codifica e decodifica di domini reali, estraendone nel processo le caratteristiche fondamentali. A partire da questo risultato si è progettata la Generative Adversarial Network basandosi sull'architettura precedentemente realizzata, con lo scopo di creare domini sintetici contenenti le stesse caratteristiche fondamentali estratte dai domini reali tramite l'autoencoder.
+Gli sviluppi futuri auspicabili sono: 
+\begin{itemize}
+\item La progettazione di un classificatore neurale con un'architettura più elaborata, in grado di superare i risultati ottenuti, in particolare con l'ausilio di Reti Convoluzionali.
+\item L'ideazione di un sistema di Adversarial Learning efficace rispetto al caso particolare di generazione di DGA con il fine di rafforzare la qualità del classificatore. Sebbene il concetto di Generative Adversarial Network abbia dimostrato buoni risultati in ambito di visione artificiale e image manipulation, non si può affermare lo stesso per il caso analizzato. In particolare la realizzazione di una GAN funzionante ha richiesto un notevole sforzo ideativo e implementativo a causa della complessità della rete ed una diffusa instabilità, tipica di tale architettura. Atre metodologie di reti generative come i Variational Autoencoders, potrebbero fornire un risultato più significativo nel caso particolare di generazione di domini di rete in grado di rinforzare l'efficacia di un classificatore neurale per DGA.
+\end{itemize}
 
-Il risultato ottenuto è stato un subset di domini sintetici con i quali è stato possibile testare il classificatore neurale, ottenendo gravi perdite di performance rispetto la rilevazione efficace dei domini.
-
-Si è proceduto quindi ad allenare il classificatore neurale con i  domini provenienti dalla Generative Adversarial Network, ottenendo robustezza riguardo tale caso, senza perdere performance nei confronti dei domini DGA e domini reali che componevano inizialmente il dataset di allenamento.
